--- a/site-markup/dev/src/sass/layout/_main.scss
+++ b/site-markup/dev/src/sass/layout/_main.scss
@@ -1,6 +1,6 @@
 html {
 
-  height: 100%;
+  min-height: 100%;
   &.ovh {
     overflow: hidden;
   }
@@ -14,7 +14,6 @@ body {
   font-weight: 400;
   color: $black;
   font-family: 'Noto', sans-serif;
-  height: 100%;
 }
 * {
   box-sizing: border-box;
@@ -32,7 +31,8 @@ svg {
 #main {
   position: relative;
   width: 100%;
-
+  min-height: 100%;
+  flex-grow: 1;
 }
 #wrapper {
   display: flex;
@@ -48,8 +48,5 @@ svg {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  .footer {
-    margin-top: auto;
-  }
 
 }
