add svg-watch-and-rebuild-html task

--- a/site-markup/src/sass/styles.scss
+++ b/site-markup/src/sass/styles.scss
@@ -1,6 +1,7 @@
 @import "abstracts/general";
 @import "base/base";
 @import "layout/layout";
+@import "patterns/patterns";
 @import "elements/elements";
 @import "components/components";
 @import "pages/all-pages";
